dashboard-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-pipelines
  labels:
    name: tekton-dashboard
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - dashboard.tekton.steve-aws.com
      secretName: tekton-dashboard-secret
  rules:
    - host: dashboard.tekton.steve-aws.com
      http:
        paths:
          - pathType: ImplementationSpecific
            path: /tekton(/|$)(.*)
            backend:
              service:
                name: tekton-dashboard
                port:
                  number: 9097
