el-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: el-ingress
  labels:
    name: el-listener-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: el.tekton.eks.steve-aws.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: el-trigger-eventlistener
                port:
                  number: 8080
